@@ -10,24 +10,54 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import model.LearningContent;
 import org.eclipse.microprofile.jwt.JsonWebToken;
+
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
-@Path("/learning")
-@Produces(MediaType.APPLICATION_JSON)
-@Consumes(MediaType.APPLICATION_JSON)
-public class LearningContentResource {
-    @Inject EntityManager em;
-    @Inject JsonWebToken jwt;
 
+@Path("/learning")
+@Consumes(MediaType.APPLICATION_JSON)
+@Produces(MediaType.APPLICATION_JSON)
+public class LearningContentResource {
+
+    @Inject EntityManager em;
+    @Inject JsonWebToken jwt;                     // ▸ sub = email, name = display-name
+
+    /* ─────────────────────────────────────────────
+     *  1) LIST  (ทั้งหมด หรือเฉพาะของตัวเอง)
+     *    GET /learning            → all
+     *    GET /learning?mine=true  → เฉพาะของผู้เรียก
+     * ───────────────────────────────────────────── */
     @GET
-    public List<LearningContentDto> list() {
-        return em.createQuery("SELECT lc FROM LearningContent lc", LearningContent.class)
+    public List<LearningContentDto> list(
+            @QueryParam("mine") @DefaultValue("false") boolean mine) {
+
+        if (mine) {                              // คืนเฉพาะ content ของตัวเอง
+            String email = jwt.getSubject();     // email จาก JWT
+            return em.createQuery("""
+                    SELECT lc
+                      FROM LearningContent lc
+                     WHERE lc.authorEmail = :email
+                     ORDER BY lc.createdAt DESC
+                   """, LearningContent.class)
+                    .setParameter("email", email)
+                    .getResultStream()
+                    .map(LearningContentDto::fromEntity)
+                    .toList();
+        }
+
+        // default = ทุกคอร์ส
+        return em.createQuery("""
+                FROM LearningContent lc
+                ORDER BY lc.createdAt DESC
+               """, LearningContent.class)
                 .getResultStream()
                 .map(LearningContentDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /* ─────────────────────────────────────────────
+     *  2) CREATE  (admin เท่านั้น)
+     * ───────────────────────────────────────────── */
     @POST
     @Transactional
     @RolesAllowed("admin")
@@ -35,20 +65,27 @@ public class LearningContentResource {
 
         LearningContent lc = dto.toEntity();
         lc.setAuthorName(jwt.getClaim("name"));
-        lc.setAuthorRole("Admin");
+        lc.setAuthorEmail(jwt.getSubject());     // 🆕 เก็บ email
+        lc.setAuthorRole("admin");
 
         em.persist(lc);
+
         return Response
                 .created(URI.create("/learning/" + lc.getId()))
                 .entity(LearningContentDto.fromEntity(lc))
                 .build();
     }
 
+    /* ─────────────────────────────────────────────
+     *  3) UPDATE  (admin)
+     * ───────────────────────────────────────────── */
     @PUT
     @Path("/{id}")
     @Transactional
     @RolesAllowed("admin")
-    public LearningContentDto update(@PathParam("id") Long id, LearningContentDto dto) {
+    public LearningContentDto update(@PathParam("id") Long id,
+                                     LearningContentDto dto) {
+
         LearningContent lc = em.find(LearningContent.class, id);
         if (lc == null) throw new NotFoundException();
 
@@ -60,6 +97,9 @@ public class LearningContentResource {
         return LearningContentDto.fromEntity(lc);
     }
 
+    /* ─────────────────────────────────────────────
+     *  4) DELETE  (admin)
+     * ───────────────────────────────────────────── */
     @DELETE
     @Path("/{id}")
     @Transactional
@@ -68,12 +108,15 @@ public class LearningContentResource {
         LearningContent lc = em.find(LearningContent.class, id);
         if (lc != null) em.remove(lc);
     }
+
+    /* ─────────────────────────────────────────────
+     *  5) GET ONE  (public)
+     * ───────────────────────────────────────────── */
     @GET
     @Path("/{id}")
     public LearningContentDto getOne(@PathParam("id") Long id) {
-        var content = em.find(LearningContent.class, id);
-        if (content == null) throw new NotFoundException();
-        return LearningContentDto.fromEntity(content);
+        LearningContent lc = em.find(LearningContent.class, id);
+        if (lc == null) throw new NotFoundException();
+        return LearningContentDto.fromEntity(lc);
     }
-
 }
